5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4193/executions/1582_1560.log
== TEST (2019-03-26 12:50:43) 
-- CODE:
string = "Augusta Ada Byron,a condessa de LOvelace,nasceu em 1815,na Inglaterra.".lower()
print(string..louwer)
-- ERROR:
File "XXXX", line 2
    print(string..louwer)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 13:35:22) 
-- CODE:
string = "Augusta Ada Byron,a condessa de LOvelace,nasceu em 1815,na Inglaterra.".lower()
print(string)
-- OUTPUT:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 13:35:28) 
-- CODE:
string = "Augusta Ada Byron,a condessa de LOvelace,nasceu em 1815,na Inglaterra.".lower()
print(string)
-- EXECUTION TIME:
0.154144
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 13:35:49) 
-- CODE:
string = "Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra.".lower()
print(string)
-- OUTPUT:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 13:35:52) 
-- CODE:
string = "Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra.".lower()
print(string)
-- EXECUTION TIME:
0.177072
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 13:36:18) 
-- CODE:
string = "Augusta Ada Byron,a condessa de Lovelace,nasceu em 1815,na Inglaterra.".lower()
print(string)
-- OUTPUT:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 13:36:22) 
-- CODE:
string = "Augusta Ada Byron,a condessa de Lovelace,nasceu em 1815,na Inglaterra.".lower()
print(string)
-- EXECUTION TIME:
0.185301
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 13:37:54) 
-- CODE:
string = "Augusta Ada Byron,a condessa de Lovelace,nasceu em 1815,na Inglaterra.".lower()
print(string)
-- OUTPUT:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 13:38:21) 
-- CODE:
string = "Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra.".lower()
print(string)
-- OUTPUT:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 13:38:26) 
-- CODE:
string = "Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra.".lower()
print(string)
-- EXECUTION TIME:
0.175644
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 13:38:49) 
-- CODE:
string = "Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra."."lower"()
print(string)
-- ERROR:
File "XXXX", line 1
    string = "Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra."."lower"()
                                                                                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 13:39:21) 
-- CODE:
string = "Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra.".lower()
print(string.lower)
-- OUTPUT:
<built-in method lower of str object at 0x7fa2b6595918>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 13:39:30) 
-- CODE:
string = "Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra.".lower()
print(string)
-- OUTPUT:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 15:57:18) 
-- CODE:
string = "Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra."
print(string.lower())
-- OUTPUT:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 15:57:21) 
-- CODE:
string = "Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra."
print(string.lower())
-- EXECUTION TIME:
0.210387
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 15:57:52) 
-- CODE:
string = "Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra."
print(string.lower())
-- OUTPUT:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 15:58:23) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815,na Inglaterra."
print(string.lower())
-- OUTPUT:
augusta ada byron, a condessa de lovelace, nasceu em 1815,na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 15:58:26) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string.lower())
-- OUTPUT:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 15:58:30) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string.lower())
-- EXECUTION TIME:
0.110576
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
